--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-# webstorm
-/.idea
-.idea/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 node_modules
 node_modules/
-
 /.pnp
 .pnp.js
+.idea
 
 # testing
 /coverage
 
+# production
+/build
 
 # misc
 .DS_Store
@@ -24,4 +24,3 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.vscode/settings.json
